feImage referencing a primitive draws incorrectly https://bugs.webkit.org/show_bug.cgi?id=71731 <rdar://problem/10408178>

Reviewed by Simon Fraser.

Don't attempt to resolve an <feImage>'s referenced element until it's used, as it
may not exist at the time the attribute is set on the <feImage>.

Don't attempt to render an <feImage> if the referenced element is of size 0x0.

Tests: svg/filters/feImage-reference-svg-primitive.svg
       svg/filters/feImage-zero-size-crash.svg

* svg/SVGFEImageElement.cpp:
(WebCore::SVGFEImageElement::parseMappedAttribute):
(WebCore::SVGFEImageElement::build):

Add a test (feImage-reference-svg-primitive) that ensures that having
an <feImage> referencing an SVG primitive which is declared after it
successfully paints the referenced object.

Add a test (feImage-zero-size-crash) to see if we crash when <feImage>
references an object with 0x0 size.

* platform/mac/svg/filters/feImage-reference-svg-primitive-expected.png: Added.
* platform/mac/svg/filters/feImage-reference-svg-primitive-expected.txt: Added.
* svg/filters/feImage-reference-svg-primitive.svg: Added.
* svg/filters/feImage-zero-size-crash-expected.txt: Added.
* svg/filters/feImage-zero-size-crash.svg: Added.


Canonical link: https://commits.webkit.org/88347@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99782 268f45cc-cd09-0410-ab3c-d52691b4dbfc